# amazon_book_ETL

./: .gitignore  CLAUDE.md  README.md  config.py  config.yaml  connection.py  ingest.py  logger.py  logging_db.py  main.py  pyproject.toml  requirements-dev.txt  requirements-scrape.txt  requirements.in  requirements.txt
.github/workflows/: scrape.yml  tests.yml
airflow/dags/: pipeline.py
books-28817974889/: books_20260706_193733.csv
dbt_project/: dbt_project.yml
dbt_project/models/marts/: books_registry.sql  fct_books_history.sql  schema.yml
dbt_project/models/staging/: base_bronze_books.sql  schema.yml  sources.yml  stg_books.sql
dbt_project/tests/: assert_fct_books_price_positive.sql  assert_fct_books_rating_max_5.sql  assert_int_books_unique_per_session.sql
docs/: architecture.md
scripts/: init_db.py  pull_artifacts.sh
sql/: schema.sql
tests/: test_branch_start.py  test_config.py  test_dag.py  test_ingest.py  test_parser.py  test_scraper.py
tests/fixtures/: search_page.html
