[project]
name = "amazon-books-etl"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "beautifulsoup4",
    "pandas",
    "psycopg[binary]",
    "PyYAML",
    "python-dotenv",
    "apache-airflow",
    "apache-airflow-providers-standard",
    "apache-airflow-providers-slack",
    "dbt-core",
    "dbt-postgres",
]

[project.optional-dependencies]
scrape = ["requests", "beautifulsoup4", "pandas", "PyYAML"]

[dependency-groups]
dev = ["pytest", "ruff", "pyright"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff.lint.per-file-ignores]
# W DAG-ach sys.path.insert MUSI wykonać się przed importami lokalnymi (from main import ...),
# więc importy nie mogą być na samej górze pliku — E402 jest tu fałszywie pozytywny.
"airflow/dags/*" = ["E402"]
# Test importuje config po sys.path.insert (jak DAG-i) — E402 fałszywie pozytywny.
"tests/test_branch_start.py" = ["E402"]
